--- a/assets/app.css
+++ b/assets/app.css
@@ -1,4 +1,6 @@
 @import "css/technical.css";
+@import "css/chats.css";
+@import "css/backToTop.css";
 @import "css/reset.css";
 @import "css/menu.css";
 @import "css/slider.css";
