--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -132,7 +132,7 @@
 	height: 80px;
 	background: white;
 	position: fixed;
-	z-index: 99;
+	z-index: 998;
     box-shado: 0px 0px 2px rgb(189, 189, 189);
 }
 
@@ -192,9 +192,9 @@
 
 
 .responsive-menu-item { 
-	z-index: 11;
+	z-index: 996;
 	width: 100%;
-	height: auto;
+	/*height: auto;*/
 	text-align: left;
 	background: white;
 	padding-top: 100px;
@@ -202,6 +202,7 @@
 	left: 100%;
 	transition: 1s;
 	display: none;
+    height: 100vh;
 }
 
 .menu-slide {
